<resources>
    <string name="app_name">My Test Application</string>

    <string name="svg1_desc">lake 1</string>
    <string name="svg2_desc">lake 2</string>
    <string name="svg3_desc">lake 3</string>
    <string name="svg4_desc">rock 4</string>
    <string name="svg5_desc">rock 5</string>
    <string name="svg6_desc">rock 6</string>

    <string name="svg7_desc">tree 1</string>

    <!-- title on title pag-->
    <string name="title">TOUCH \t GRASS</string>

    <string name="login">Start</string>

    <!-- channel stuff -->
    <string name="channel_name">My Notification Channel</string>
    <string name="channel_description">Channel for app notifications</string>
    <string name="channel_id">my_notification_channel</string>

    <!-- homepage -->
    <string name="settings_icon">settings</string>
    <string name="tree_icon">tree</string>
    <string name="memory_icon">memories</string>

    <!-- settings page -->
    <string name="name">Name</string>
    <string name="placeholder_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="placeholder_email">Enter your email</string>
    <string name="start_time">Spontaneous Event Time</string>
    <string name="placeholder_start_time">Select Start Time</string>
    <string name="placeholder_end_time">Select End Time</string>

    <string name="back_button"> &lt; Back</string>

</resources>
